# color_detector

./: README.md
color_detector/: CMakeLists.txt  nodelet_description.xml  package.xml
color_detector/launch/: run_color_detector_node.launch
color_detector/src/: color_detector_node.cpp  color_detector_nodelet.cpp
color_detector_msgs/: CMakeLists.txt  package.xml
color_detector_msgs/msg/: TargetAngle.msg  TargetAngleList.msg  TargetPosition.msg
color_detector_params/: CMakeLists.txt  package.xml
color_detector_params/cfg/: Hsv.cfg
color_detector_params/config/: config.yaml  roomba1_hsv.yaml  roomba2_hsv.yaml  roomba3_hsv.yaml  roomba4_hsv.yaml  roomba5_hsv.yaml  roomba6_hsv.yaml
color_detector_params/include/color_detector_params/: hsv.h
color_detector_srvs/: CMakeLists.txt  package.xml
color_detector_srvs/srv/: ColorEnable.srv
image_color_detector/: CMakeLists.txt  package.xml
image_color_detector/include/image_color_detector/: image_color_detector.h
image_color_detector/launch/: run_image_color.launch
image_color_detector/src/: image_color_detector.cpp  image_color_detector_node.cpp
point_cloud_color_detector/: CMakeLists.txt  package.xml
point_cloud_color_detector/config/: config.yaml
point_cloud_color_detector/include/point_cloud_color_detector/: point_cloud_color_detector.h  point_cloud_color_detector.hpp
point_cloud_color_detector/launch/: run_pc_color.launch
point_cloud_color_detector/src/: point_cloud_color_detector.cpp  point_cloud_color_detector_node.cpp
point_cloud_color_detector/tools/: teleop_color_enable.cpp
