<?xml version="1.0"?>
<package format="2">
  <name>color_detector</name>
  <version>0.0.0</version>
  <description>The color_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>Apache License 2.0</license>
  <author email="fukatsuren88@gmail.com">RenFukatsu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>image_color_detector</depend>
  <depend>point_cloud_color_detector</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml" />
  </export>
</package>
