<?xml version="1.0"?>
<package format="2">
  <name>color_detector_params</name>
  <version>0.0.0</version>
  <description>The color_detector_params package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
