<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_color_detector</name>
  <version>0.0.0</version>
  <description>The point_cloud_color_detector package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>color_detector_msgs</depend>
  <depend>color_detector_srvs</depend>
  <depend>color_detector_params</depend>

</package>
